hphp/test/slow/lang/tuple_non_hh.php.expectf
Fatal error: Call to undefined function tuple() in %s/test/slow/lang/tuple_non_hh.php on line 5